# Bebop

./: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  DEADLOCK_API_RESEARCH.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
bot/: __main__.py  bot.py  config.py  database.py  log.py
bot/cogs/: error_handler.py  queue.py
bot/models/: __init__.py  deadlock.py  live_match.py  match_history.py  queue.py
bot/services/: __init__.py  deadlock_api.py  deadlock_callback_server.py  hero_roster.py  queue_service.py
bot/views/: __init__.py  live_match_post.py
